--- a/pyq/t.html
+++ b/pyq/t.html
@@ -1,136 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        body {
-            background-color: rgba(0, 100, 0, 0.413);
+        body{
+        background: #3399ff;
         }
 
-        li {
-            padding-bottom: 10px;
+.circle{
+position: absolute;
+border-radius: 50%;
+background: white;
+animation: ripple 15s infinite;
+box-shadow: 0px 0px 1px 0px #508fb9;
+}
+
+.small{
+width: 200px;
+height: 200px;
+left: -100px;
+bottom: -100px;
+}
+
+.medium{
+width: 400px;
+height: 400px;
+left: -200px;
+bottom: -200px;
+}
+
+.large{
+width: 600px;
+height: 600px;
+left: -300px;
+bottom: -300px;
+}
+
+.xlarge{
+width: 800px;
+height: 800px;
+left: -400px;
+bottom: -400px;
+}
+
+.xxlarge{
+width: 1000px;
+height: 1000px;
+left: -500px;
+bottom: -500px;
+}
+
+.shade1{
+opacity: 0.2;
+}
+.shade2{
+opacity: 0.5;
+}
+
+.shade3{
+opacity: 0.7;
+}
+
+.shade4{
+opacity: 0.8;
+}
+
+.shade5{
+opacity: 0.9;
+}
+
+@keyframes ripple{
+0%{
+transform: scale(0.8);
+}
+
+50%{
+transform: scale(1.2);
+}
+
+100%{
+transform: scale(0.8);
+}
         }
     </style>
 </head>
-
-<body class="bg-Secondary">
-    <div class="container">
-        <table class="table table-striped table-hover table-bordered">
-            <tbody>
-                <tr>
-                    <td style="width: 13.7069%"><strong>Subjects</strong></td>
-                    <td style="width: 86.2931%"><strong>Topics</strong></td>
-                </tr>
-                <tr>
-                    <td style="width: 13.7069%">General Awareness</td>
-                    <td style="width: 86.2931%">
-                        <ol>
-                            <li>Knowledge of Current affairs</li>
-                            <li>Indian Geography</li>
-                            <li>Culture and History of Including Freedom Struggle</li>
-                            <li>Indian Polity and Constitution</li>
-                            <li>Indian Economy</li>
-                            <li>Environmental Issues Concerning India and the World</li>
-                            <li>Sports</li>
-                            <li>General scientific and technological developments, etc.</li>
-                        </ol>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 13.7069%">Basic Science and Engineering</td>
-                    <td style="width: 86.2931%">
-                        <ol>
-                            <li>Physics fundamentals- Units, Measurements, Mass, Weight,<br>
-                                Density, Work, Power, and Energy, Speed and Velocity, Heat and Temperature</li>
-                            <li>Electricity and Magnetism- Electric Charge, Field, and Intensity, Electric Potential and
-                                Potential Difference, Simple Electric Circuits, Conductors, Non-conductors/Insulators,
-                                Ohm’s
-                                Law and its Limitations, Resistances in Series and Parallel of a Circuit and Specific
-                                Resistance, Relation between Electric Potential, Energy, and Power (Wattage), Ampere’s
-                                Law,
-                                Magnetic Force on Moving Charged Particle and Long Straight<br>
-                                Conductors, Electromagnetic Induction, Faraday’s Law, and Electromagnetic Flux, Magnetic
-                                Field, Magnetic Induction</li>
-                            <li>Electronics and Measurements- Basic Electronics, Digital Electronics, Electronic Devices
-                                and
-                                Circuits, Microcontroller, Microprocessor, Electronic Measurements, Measuring Systems
-                                and
-                                Principles, Range Extension Methods, Cathode Ray Oscilloscope, LCD, LED Panel, and
-                                Transducers.</li>
-                        </ol>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 13.7069%">Basic of Computers and Applications</td>
-                    <td style="width: 86.2931%">
-                        <ol>
-                            <li>Architecture of Computers</li>
-                            <li>Input and Output devices; Storage devices, Networking</li>
-                            <li>Operating Systems like Windows, Unix, Linux; MS Office</li>
-                            <li>Various data representation</li>
-                            <li>Internet and Email</li>
-                            <li>Websites &amp; Web Browsers</li>
-                            <li>Computer Virus</li>
-                        </ol>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 13.7069%">Mathematics</td>
-                    <td style="width: 86.2931%">
-                        <ol>
-                            <li>Number system</li>
-                            <li>Rational and irrational numbers</li>
-                            <li>BODMAS rule</li>
-                            <li>Quadratic Equations,<br>
-                                Arithmetic Progression</li>
-                            <li>Similar Triangles</li>
-                            <li>Pythagoras Theorem</li>
-                            <li>Co-ordinate Geometry<br>
-                                Trigonometrical Ratios</li>
-                            <li>Heights and distances</li>
-                            <li>Surface area and Volume</li>
-                            <li>Sets: Sets and their representations, Empty sets, Finite and Infinite sets, Equal sets,
-                                Subsets, Subsets of a set of real numbers, Universal set, Venn diagrams, Union and
-                                Intersection of sets, Difference of sets, Complement of a set</li>
-                            <li>Properties of Complement</li>
-                            <li>Statistics: Measures of Dispersion: Range, Mean deviation, variance, and standard
-                                deviation
-                                of ungrouped/grouped data</li>
-                            <li>Probability occurrence of events, exhaustive events, and mutually exclusive events</li>
-                        </ol>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 13.7069%">General Intelligence &amp; Reasoning</td>
-                    <td style="width: 86.2931%">
-                        <ol>
-                            <li>Analogies</li>
-                            <li>Alphabetical and Number Series</li>
-                            <li>Coding and Decoding</li>
-                            <li>Mathematical operations</li>
-                            <li>Relationships</li>
-                            <li>Syllogism</li>
-                            <li>Jumbling</li>
-                            <li>Venn Diagram</li>
-                            <li>Data Interpretation and Sufficiency</li>
-                            <li>Conclusions and decision making</li>
-                            <li>Similarities and differences<br>
-                                Analytical reasoning</li>
-                            <li>Classification</li>
-                            <li>Directions</li>
-                            <li>Statement-Arguments cement-Arguments a and Assumptions, etc.</li>
-                        </ol>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+<body>
+    <div class='ripple-background'>
+        <div class='circle xxlarge shade1'></div>
+        <div class='circle xlarge shade2'></div>
+        <div class='circle large shade3'></div>
+        <div class='circle mediun shade4'></div>
+        <div class='circle small shade5'></div>
     </div>
-
 </body>
-
 </html>
